fix: Fix CI compilation error